test/expected/define_si.out
define SI as static int
                    ^
21: error: "type static int" is illegal for built-in type
